--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,130 @@
 *, *::after, *::before {
   box-sizing:border-box;  
 }
+body{
+    margin: 0;
+}
+img{
+    width: 25em;
+    height: 25em;
+}
 
+H1{
+    text-align: center;
+    font-family: Raleway; 
+    font-weight: 600;
+}
+
+H2{
+    font-family: Raleway; 
+    font-weight: 600;
+    
+}
+
+p{
+    font-family: Raleway; 
+}
+
+
+
+
+.collapsible {
+  background-color: #ffffff;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+
+.active, .collapsible:hover {
+  background-color: #ffffff;
+}
+
+.content {
+  padding: 0 1em;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease-out;
+  background-color: #ffffff;
+}
+    
+img{
+  position:relative;
+}
+////* SLIDER*///
+
+* {box-sizing: border-box;}
+body {font-family: Verdana, sans-serif;}
+.mySlides {display: none;}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 100%;
+  position: relative;
+  margin: auto;
+}
+.slideshow-container img{
+    height: 38em;
+}
+/* Caption text */
+.text {
+  color: #ffffff;
+  font-size: 35px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 0.5em;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  
+}
+.stip{
+    text-align: center;
+}
+/* The dots/bullets/indicators */
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0.1em 0.2em;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .text {font-size: 11px}
+}
