--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,9 @@
   box-sizing:border-box;  
 }
 body{
-    margin-left: 0.5em;
+	margin: 0em 0.5em;
 }
+
 img{
     width: 25em;
     height: 25em;
@@ -15,7 +16,18 @@ H1{
     text-align: center;
     font-family: Raleway; 
     font-weight: 600;
+	background-color: transparent;
+	z-index: 100;
+	position: absolute;
+	left: 7.5em;
+	top: 0.25em;
+	color: white;
+	letter-spacing: 0.25em;
+	margin: 0;
+	
+
 }
+
 
 H2{
     font-family: Raleway; 
@@ -28,7 +40,8 @@ p{
 }
 
 /*nav*/
-
+nav{
+}
 
 
 /* SLIDER*/
@@ -51,34 +64,32 @@ img {vertical-align: middle;}
   font-size: 35px;
   padding: 8px 12px;
   position: absolute;
-  bottom: 0.5em;
+  bottom: 1.5em;
   width: 100%;
   text-align: center;
+
 }
 
-.nummertekst {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  
-}
 .stippen{
-    margin-left: 10em;
+   margin: 10em;
+   position: absolute;
+   bottom: 0.1em;
+
 }
 
 .dot {
-  height: 15px;
-  width: 15px;
-  margin: 0.1em 0.2em;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
+	height: 25px;
+    width: 25px;
+	margin: 0.1em 0.2em;
+	background-color: #bbb;
+	border-radius: 50%;
+	display: inline-block;
+	transition: background-color 0.6s ease;
+  
 }
 
 .active {
-  background-color: #717171;
+	background-color: #717171;
 }
 
 /* Fading animation */
@@ -102,27 +113,27 @@ img {vertical-align: middle;}
 
 
 .collapsible {
-  background-color: #ffffff;
-  color: black;
-  cursor: pointer;
-  padding: 18px;
-  width: 100%;
-  border: none;
-  text-align: left;
-  outline: none;
-  font-size: 15px;
+	  background-color: #ffffff;
+	  color: black;
+	  cursor: pointer;
+	  padding: 18px;
+	  width: 100%;
+	  border: none;
+	  text-align: left;
+	  outline: none;
+	  font-size: 15px;
 }
 
 .active, .collapsible:hover {
-  background-color: #ffffff;
+	background-color: #ffffff;
 }
 
 .collapsible:after {
-  content: '\002B';
-  color: black;
-  font-weight: bold;
-  float: right;
-  margin-left: 5px;
+	content: '\002B';
+	color: black;
+	font-weight: bold;
+	float: right;
+	margin-left: 5px;
 }
 
 content .active:after {
@@ -130,11 +141,11 @@ content .active:after {
 }
 
 .content {
-  padding: 0 18px;
-  max-height: 0;
-  overflow: hidden;
-  transition: max-height 0.2s ease-out;
-  background-color: #f1f1f1;
+  	padding: 0 18px;
+  	max-height: 0;
+  	overflow: hidden;
+  	transition: max-height 0.2s ease-out;
+  	background-color: #f1f1f1;
 }
 
 /*top-button*/
