--- a/styles/style.css
+++ b/styles/style.css
@@ -7,57 +7,102 @@ body{
 }
 
 img{
-    width: 25em;
+    max-width: 100%;
     height: 25em;
 
 }
 
-H1{
-    text-align: center;
-    font-family: Raleway; 
-    font-weight: 600;
-	background-color: transparent;
-	z-index: 100;
+h1{
+    font-family: montserrat; 
+    font-weight: 900;
 	position: absolute;
-	left: 7.5em;
+	text-align: center;
+	width: 100%;
 	top: 0.25em;
-	color: white;
 	letter-spacing: 0.25em;
 	margin: 0;
+}
+
+h2{
+	width: 100%;
+	font-family: montserrat; 
 	
+	
+}
+h3{
+	 font-family: montserrat;
+	font-weight: bolder;
+	margin: 10px 0px;
 
 }
-
-
-H2{
-    font-family: Raleway; 
-    font-weight: 600;
-    
-}
-
 p{
-    font-family: Raleway; 
+    font-family: montserrat;
+	margin: 10px 0px;
 }
+
 
 /*nav*/
-nav{
+.nav{
+	width: 90%;
+	height: 2.5em;
+	background-color: transparent;
+	top: 0.3em;
+	left: 1em;
+	color: white;
+	position: fixed;
+	z-index: 100;
+}
+.nav.active{
+	width: 90%;
+	height: 2.5em;
+	background-color: white;
+	top: 0.3em;
+	left: 1em;
+	color: black;
+	position: fixed;
+	z-index: 100;
+
+}
+.menu{
+	border: 0px;
+	background-color: transparent;
+	top: 0.3em;
+	left: 1em;
+	position: absolute;
 }
 
+.menu i{
+	color: white;
+}
+.menuactive i{
+	color: black;
+}
 
-/* SLIDER*/
+.shop{
+	border: 0px;
+	background-color: white;
+	top: 0.3em;
+	right: 1em;
+	position: absolute;
+}
+.shopactive {
+	border: 0px;
+	background-color: black;
+	color: white;
+	top: 0.3em;
+	right: 1em;
+	position: absolute;
+}
 
-* {box-sizing: border-box;}
-.slides {display: none;}
-img {vertical-align: middle;}
+/*slider*/
 
-/* Slideshow container */
+
 .carrousel {
-  max-width: 25em;
   position: relative;
 
 }
 .carrousel img{
-    height: 38em;
+    height: auto;
 }
 .tekst-in-foto {
   color: #ffffff;
@@ -70,45 +115,23 @@ img {vertical-align: middle;}
 
 }
 
-.stippen{
-   margin: 10em;
-   position: absolute;
-   bottom: 0.1em;
+
+/* grid*/
+
+.grid{
+	display:grid;
+  	grid-template-columns:1fr 1fr;
+	grid-template-rows: 15em 15em;
+	grid-gap: 1em;
+	padding-bottom: 4em;
 
 }
-
-.dot {
-	height: 25px;
-    width: 25px;
-	margin: 0.1em 0.2em;
-	background-color: #bbb;
-	border-radius: 50%;
-	display: inline-block;
-	transition: background-color 0.6s ease;
-  
+.grid img{
+	height: 10em;
+	width: 100%;
 }
 
-.active {
-	background-color: #717171;
-}
 
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@-webkit-keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
-@keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
 
 
 
@@ -149,14 +172,26 @@ content .active:after {
 }
 
 /*top-button*/
+button{
+	border-radius: 300%;
+	height: 2.5em;	
+	width: 2.5em;
+	background-color: white;
+	border: solid 1px gray;
+}
 
-#top{
-	color: black;
+i{
+	font-size: 20px;
+	color: #9d9d9c;
+	padding: 0;
+
+
+	
+}
+#top{	
 	position: fixed;
 	bottom: 1em;
 	right: 1em;
-	font-weight: 600;
-	border-radius: 50%
 }
 
 #top:active{
@@ -166,14 +201,20 @@ content .active:after {
 
 
 /*footer*/
+footer{
+	background-color: darkgrey;
+}
 
 
 ul{
-	display:flex;
+	display: flex;
 	list-style: none;
+	padding: 0;
+	margin: 4em 0 0 0;
+	justify-content: center;
 }
-ul img{
-	max-width: 50%;
-  	height: auto;
-	
+li img{
+	height: auto;
+	max-width: 100%;
+	padding: 0 0.25em;
 }
