--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,7 @@ body{
 	margin: 0em 0.5em;
 }
 
+
 img{
     max-width: 100%;
     height: 25em;
@@ -99,17 +100,18 @@ p{
 
 .carrousel {
   position: relative;
-
+	padding-bottom: 3em;
 }
 .carrousel img{
-    height: auto;
+    height:100vh;
+
 }
 .tekst-in-foto {
   color: #ffffff;
   font-size: 35px;
   padding: 8px 12px;
   position: absolute;
-  bottom: 1.5em;
+  bottom: 2.5em;
   width: 100%;
   text-align: center;
 
