--- a/styles/style.css
+++ b/styles/style.css
@@ -41,7 +41,6 @@ p{
 	margin: 10px 0px;
 }
 
-
 /*nav*/
 .nav{
 	width: 90%;
@@ -62,7 +61,6 @@ p{
 	color: black;
 	position: fixed;
 	z-index: 100;
-
 }
 .menu{
 	border: 0px;
@@ -114,7 +112,6 @@ p{
   bottom: 2.5em;
   width: 100%;
   text-align: center;
-
 }
 
 
@@ -133,9 +130,55 @@ p{
 	width: 100%;
 }
 
+.detailfoto {
+	display: grid;
+	width: 100%;
+}
+.detailfoto img{
+	display: grid;
+	height: auto;
+}
+
+/*grid-row-start / grid-column-start / grid-row-end / grid-column-end*/
+.foto1 { grid-area: 1 / 1 / 2 / 3; }
+.foto2 { grid-area: 2 / 1 / 3 / 2; }
+.foto3 { grid-area: 2 / 2 / 3 / 3; }
+.foto4 { grid-area: 3 / 1 / 4 / 3; }
+.foto5 { grid-area: 4 / 1 / 5 / 2; }
+.foto6 { grid-area: 4 / 2 / 5 / 3; }
 
 
 
+
+
+
+.bestel{
+	width: 100%;
+	height: 8em;
+	background-color: white;
+	position: sticky;
+	bottom: 0;
+}
+
+.bestel p{
+	text-align: center;
+	padding-top: 1em;
+}
+
+.bestelknop{
+	background-color: black;
+	color: white;
+	width: 90%;
+	height: 4em;
+	border-radius: 0;
+	margin-left: 1em;
+}
+.bestelknop p{
+	color: white;
+	padding: 0;
+	font-size: 15px;
+	font-weight: bold;
+}
 
 .collapsible {
 	  background-color: #ffffff;
@@ -212,7 +255,7 @@ ul{
 	display: flex;
 	list-style: none;
 	padding: 0;
-	margin: 4em 0 0 0;
+	margin: 0 0 0 0;
 	justify-content: center;
 }
 li img{
