--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,8 @@
 *, *::after, *::before {
   box-sizing:border-box;  
 }
+
+/*elementen*/
 body{
 	margin: 0em 0.0em;
 	animation: fadein 5s;
@@ -91,7 +93,7 @@ li img{
     opacity: 1;
   }
 }
-
+/*zoom in detailfotos*/
 @keyframes zoom {
   0% {
    transform: scale(1);
@@ -165,16 +167,18 @@ li img{
 
 /*slider*/
 
-
-.carrousel {
+.second {
+   display: none;
+}
+#slideshow {
   	position: relative;
 	padding-bottom: 3em;
 }
-.carrousel img{
+#slideshow img{
     height:100vh;
 
 }
-.carrousel p:nth-of-type(1) {
+#slideshow p:nth-of-type(1) {
   	color: #ffffff;
   	font-size: 35px;
   	padding: 8px 12px;
@@ -215,7 +219,12 @@ li img{
 	height: auto;
 }
 
-/*grid-row-start / grid-column-start / grid-row-end / grid-column-end*/
+/*grid-row-start / grid-column-start / grid-row-end / grid-column-end
+
+Row= horizontaal
+Column= verticaal
+		
+*/
 
 img:nth-of-type(1){ grid-area: 1 / 1 / 2 / 3; }
 img:nth-of-type(2){ grid-area: 2 / 1 / 3 / 2; }
@@ -225,7 +234,7 @@ img:nth-of-type(5){ grid-area: 4 / 1 / 5 / 2; }
 img:nth-of-type(6){ grid-area: 4 / 2 / 5 / 3; }
 
 
-
+/* Bestel knop detail*/
 .bestel{
 	width: 100%;
 	height: 8em;
@@ -255,6 +264,7 @@ img:nth-of-type(6){ grid-area: 4 / 2 / 5 / 3; }
 	font-weight: bold;
 }
 
+/*collapsible*/
 .info{
 	margin-bottom: 2em;
 }
@@ -289,6 +299,7 @@ img:nth-of-type(6){ grid-area: 4 / 2 / 5 / 3; }
   	background-color: #f1f1f1;
 }
 
+/*terug knop*/
 .terug{
 	max-height: 3em;
 	max-width: 3em;
@@ -296,6 +307,7 @@ img:nth-of-type(6){ grid-area: 4 / 2 / 5 / 3; }
   	margin-left: auto;
   	margin-right: auto;
 }
+/*top knop*/
 #top{	
 	position: fixed;
 	bottom: 1em;
@@ -306,23 +318,7 @@ img:nth-of-type(6){ grid-area: 4 / 2 / 5 / 3; }
 #top:active{
 	background-color: darkgrey;
 }
+/*icon top knop*/
 .fa-angle-up:before{
 	margin: 0 0;
-}
-
-/*footer*/
-footer{
-	background-color: #edefee;
-}
-ul{
-	display: flex;
-	list-style: none;
-	margin: 0 0 0 0;
-}
-
-li{
-	width: 100%
-}
-li img{
-	height: auto;
 }
